[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/prototype_tile.png" type="Texture" id=1]
[ext_resource path="res://Test Zone/fall block.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "shake"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 15.5 )

[node name="Falling" type="KinematicBody2D"]
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shake = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 167, 1, 64, 62 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
one_way_collision = true

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
